fix: /slider align button center

--- a/src/components/shared/Slider/Slider.css
+++ b/src/components/shared/Slider/Slider.css
@@ -3,6 +3,10 @@
 	padding-top: 80px;
 	padding-bottom: 40px;
 	background-color: #cee6f1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
 }
 
 .swiper {
@@ -11,7 +15,7 @@
 
 .swiperButton {
 	position: absolute;
-	top: 50%;
+	top: 45%;
 	z-index: 10;
 	cursor: pointer;
 }
